<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BlankFragment"
        app:layout_constraintStart_toStartOf="@+id/BlankFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <fragment
        android:id="@+id/BlankFragment"
        android:name="com.example.cse5236.BlankFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="257dp"
        android:text="@string/left"
        app:layout_constraintEnd_toEndOf="@+id/BlankFragment"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/BlankFragment"
        app:layout_constraintTop_toTopOf="@+id/BlankFragment"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="60dp"
        android:text="@string/right"
        app:layout_constraintEnd_toEndOf="@+id/BlankFragment"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/BlankFragment"
        app:layout_constraintTop_toTopOf="@+id/BlankFragment"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="@+id/BlankFragment"
        app:layout_constraintTop_toTopOf="@+id/BlankFragment"
        android:contentDescription="Settings"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="335dp"
        android:text="@string/Name"
        app:layout_constraintEnd_toEndOf="@+id/BlankFragment"
        app:layout_constraintStart_toStartOf="@+id/BlankFragment"
        app:layout_constraintTop_toTopOf="@+id/BlankFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>