<resources>
    <string name="app_name">Zombie Gamebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fork">You wake up in the middle of a zombie apocalypse. \n You go outside and come across a fork in the road</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="seeZombie">You see a zombie</string>
    <string name="run">Run</string>
    <string name="fight">Fight</string>
    <string name="survive">You kill a zombie. \n You hear the voices of humans in the distance.</string>
    <string name="walk">Walk to voices</string>
    <string name="walk1">You walk towards the voices and find a group of survivors living in an abandoned building.</string>
...
    <string name="attack">Attack</string>

    <string name="lucky">The zombie trips over itself and smashes its face into the ground, effectively killing it. Just when you think you\'re safe, another zombie shows up! </string>
    <string name="trip">You trip over a rock and the zombie attacks and kills you :(</string>
    <string name="squareUp1">You start fist fighting with the zombie and ultimately win. Fighting a zombie isn\'t easy and you are exhausted. Do you...</string>
    <string name="break1">Take a break</string>
    <string name="person">You see someone running toward you in the distance.</string>
    <string name="look">You run to the side and look for a place to hide</string>
    <string name="bushes">Bushes</string>
    <string name="bushes1">You hide behind the bushes and eventually fall asleep. A group of zombies find you and eat you :(</string>
    <string name="emptyHouse">Empty House</string>
    <string name="turnZombie">You enter the house and find out that it is actually infested with zombies! You get bit by a zombie and turn into one :(</string>
    <string name="eatBrains">Eat brains</string>
...
